# Week6_NLP

./: main.py  pyproject.toml
W2/data_analytics/: 02_pandas.ipynb
W2/lecture_v2/: L02_pandas.ipynb
W5_NLP/M1/sessions/: 02_corpus.ipynb  03_prep.ipynb  05_classifier_ex1.ipynb  06_classifier_ex2.ipynb  07_information_retrieval_ex.ipynb  08_topic_modeling_ex.ipynb  TF_TFIDF_From_Scratch.ipynb
W5_NLP/M2/labs/C2_M3_Lab_1_basic_tokenization/: C2_M3_Lab_1_basic_tokenization.ipynb
W5_NLP/M2/labs/C2_M3_Lab_2_embeddings/: C2_M3_Lab_2_embeddings.ipynb
W5_NLP/M2/labs/C2_M3_Lab_4_finetuned_text_classifier/: C2_M3_Lab_4_finetuned_text_classifier.ipynb
W5_NLP/M3/: arabic_token_classification.ipynb
W5_NLP/M3/Lab/: 01_Text_Classification.ipynb
