[project]
name = "week6-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "camel-tools>=1.5.7",
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "exit>=2020.12.3",
    "ipython>=9.9.0",
    "kaggle>=1.8.3",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "pyarabic>=0.6.15",
    "pyspellchecker>=0.8.4",
    "qalsadi>=0.5.1",
    "seaborn>=0.13.2",
    "seqeval>=1.2.2",
    "spellchecker>=0.4",
    "torchmetrics>=1.8.2",
    "transformers>=4.43.4",
]
